--- a/index.html
+++ b/index.html
@@ -13,13 +13,40 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
     <title>Todo List</title>
 </head>
 
 <body>
 
-
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <div class="container">
+        <div class="title_todo d-flex justify-content-center align-items-center flex-column">
+            <h1>TODO LIST</h1>
+
+            <div class="my-4">
+                <input type="text" class="enter_todo p-1">
+                <button class="border-0 rounded-pill ms-3 p-2">INVIA</button>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="content_todo rounded">
+                <ul>
+                    <li class="list_item d-flex justify-content-between" v-for="object in todos">
+                        {{object.text}}
+                        <i class="fa-solid fa-xmark d-flex justify-content-center align-items-center fs-3"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
     <script src="todo.js"></script>
 
 </body>
