--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-
     <title>Todo List</title>
 </head>
 
@@ -30,7 +29,7 @@
             <h1>TODO LIST</h1>
 
             <div class="my-4">
-                <input type="text" class="enter_todo p-1">
+                <input type="text" placeholder="Inserisci un compito" class="enter_todo p-1">
                 <button class="border-0 rounded-pill ms-3 p-2">INVIA</button>
             </div>
         </div>
