--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <h1>TODO LIST</h1>
 
             <div class="my-4">
-                <input type="text" placeholder="Inserisci un compito" class="enter_todo p-1">
-                <button class="border-0 rounded-pill ms-3 p-2">INVIA</button>
+                <input type="text" placeholder="Inserisci un compito" class="enter_todo p-1" v-model="quest" @keyup.enter="addQuest">
+                <button class="border-0 rounded-pill ms-3 p-2" @click="addQuest">INVIA</button>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
@@ -38,7 +38,7 @@
                 <ul>
                     <li class="list_item d-flex justify-content-between" v-for="object in todos">
                         {{object.text}}
-                        <i class="fa-solid fa-xmark d-flex justify-content-center align-items-center fs-3"></i>
+                        <i class="fa-solid fa-xmark d-flex justify-content-center align-items-center fs-3 pointer_x" @click="removeQuest"></i>
                     </li>
                 </ul>
             </div>
